{
    "name": "PointerControls",
    "maps": [
        {
            "name": "pointer",
            "id": "3c570214-6b14-44a9-8e61-3e4dc9ac469f",
            "actions": [
                {
                    "name": "Touch0",
                    "type": "Value",
                    "id": "4d610105-c5af-439c-8a02-4f1976d8da67",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1",
                    "type": "Value",
                    "id": "ab738071-8de5-4951-bdf6-9c93b43821c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "MouseAndPen",
                    "id": "6503119b-11d7-4b61-9465-8ab83699a36c",
                    "path": "PointerInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "33cce31d-cbc6-4899-8781-9ab727534e60",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "contact",
                    "id": "418f64e8-359e-4b05-8869-c8a1165e44d9",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Pen",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "60ae03ce-5f16-4763-9102-400558002a23",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "4d35537c-6a23-4f4a-bad4-eaeed0a67248",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Pen",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "tilt",
                    "id": "e14524a1-8951-4672-98aa-49fda32a7548",
                    "path": "<Pen>/tilt",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Pen",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "pressure",
                    "id": "ce154ce8-174d-4bbf-adb7-4f8634b86a24",
                    "path": "<Pen>/pressure",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Pen",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "twist",
                    "id": "8f871c6e-49c6-4e0b-9d0f-65263a53ac84",
                    "path": "<Pen>/twist",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Pen",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Touch0",
                    "id": "f5819de4-b7e5-4745-9d93-2b45e9dad897",
                    "path": "PointerInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "a0baebac-8b22-4db8-9cf9-7ba8c4d8aab0",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "79b4615b-9534-4aa7-af27-90a442add4bc",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "radius",
                    "id": "07bde460-f80a-45ae-823d-db51f6bda4bb",
                    "path": "<Touchscreen>/touch0/radius",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "pressure",
                    "id": "b72c4336-bd65-457f-bacd-cf9933eb2fc7",
                    "path": "<Touchscreen>/touch0/pressure",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "inputId",
                    "id": "6be63793-ef04-469d-ac12-779245b71ba9",
                    "path": "<Touchscreen>/touch0/touchId",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Touch",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseAndPen",
                    "id": "492def87-13b3-4037-8029-bfc1054ea2ea",
                    "path": "PointerInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "1d23f0ca-0338-4418-95dd-a01b333b1915",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "contact",
                    "id": "be3a3d68-d8c4-43b8-b086-24146dd9a604",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": "Pen",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "95a3e285-1eed-4b12-8098-74ecf2e12675",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "e1c6d217-9adc-4a5c-aaa1-6087ce7811ef",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Pen",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "tilt",
                    "id": "1d09916d-8734-40d5-94d9-172e25d501ac",
                    "path": "<Pen>/tilt",
                    "interactions": "",
                    "processors": "",
                    "groups": "Pen",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "pressure",
                    "id": "9cb639e5-860e-4031-af1a-4b1f4fce73f1",
                    "path": "<Pen>/pressure",
                    "interactions": "",
                    "processors": "",
                    "groups": "Pen",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "twist",
                    "id": "a3b45bc3-a3c9-4f22-b2ce-e3c93677548d",
                    "path": "<Pen>/twist",
                    "interactions": "",
                    "processors": "",
                    "groups": "Pen",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Touch1",
                    "id": "61cd430b-1e2e-4ae6-97ee-4b7b2ce324d0",
                    "path": "PointerInput",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "contact",
                    "id": "d0b67c93-91ea-4f1b-b689-52a53d4c4ff0",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "position",
                    "id": "9f22375b-13f4-41af-95d5-71fe0890fa15",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "radius",
                    "id": "1f57a519-8b8e-451a-acde-73fe9249fb96",
                    "path": "<Touchscreen>/touch1/radius",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "pressure",
                    "id": "9e95c7c8-0227-4bba-b425-2e82d9e715b5",
                    "path": "<Touchscreen>/touch1/pressure",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "inputId",
                    "id": "ffa5da77-269a-4651-a980-cecfeaaae150",
                    "path": "<Touchscreen>/touch1/touchId",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Pen",
            "bindingGroup": "Pen",
            "devices": [
                {
                    "devicePath": "<Pen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}